tdf#113377 cui personalization: fix calling into VCL without necessary locking

We assume the SolarMutex is always taken when doing GL calls, but
putting DBG_TESTSOLARMUTEX() into WinOpenGLContext::makeCurrent()
pointed out two places in the persona code where this invariant wasn't
hold, fix those.

Opening the dialog and downloading previews of one category, then
clicking on an other button to download previews of an other category no
longer results in a crash while calling glBindFramebuffer() with this.

Change-Id: Ib8148a709f89c2dc44da102e2023cc61ba890744
Reviewed-on: https://gerrit.libreoffice.org/53414
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>